; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sctp/extr_outqueue.c_sctp_cacc_skip_3_1_d.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sctp/extr_outqueue.c_sctp_cacc_skip_3_1_d.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sctp_transport = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sctp_transport*, %struct.sctp_transport*, i32)* @sctp_cacc_skip_3_1_d to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sctp_cacc_skip_3_1_d(%struct.sctp_transport* %0, %struct.sctp_transport* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.sctp_transport*, align 8
  %6 = alloca %struct.sctp_transport*, align 8
  %7 = alloca i32, align 4
  store %struct.sctp_transport* %0, %struct.sctp_transport** %5, align 8
  store %struct.sctp_transport* %1, %struct.sctp_transport** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %7, align 4
  %9 = icmp sge i32 %8, 2
  br i1 %9, label %10, label %15

10:                                               ; preds = %3
  %11 = load %struct.sctp_transport*, %struct.sctp_transport** %6, align 8
  %12 = load %struct.sctp_transport*, %struct.sctp_transport** %5, align 8
  %13 = icmp ne %struct.sctp_transport* %11, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %10
  store i32 1, i32* %4, align 4
  br label %16

15:                                               ; preds = %10, %3
  store i32 0, i32* %4, align 4
  br label %16

16:                                               ; preds = %15, %14
  %17 = load i32, i32* %4, align 4
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
